Exposing xcode settings to UE settings UI (more work about dynamic disabling etc will follow)
#jira N/A
#rb Josh.Adams
#preflight 6446ae7a7368de8c98fc84d2

[CL 25169123 by calvin zheng in ue5-main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -2877,19 +2877,6 @@ MetalLanguageVersion=0
 bDisableMotionData=False
 bEnableAdvertisingIdentifier=True
 
-[XcodeConfiguration]
-bUseModernXcode=false
-bUseModernCodeSigning=true
-ModernSigningTeam=
-ModernSigningPrefix=com.YourCompany
-ModernBundleIdentifier=$(UE_SIGNING_PREFIX).$(UE_PRODUCT_NAME_STRIPPED)
-AppCategory=public.app-category.games
-TemplateMacPlist=/Engine/Build/Mac/Resources/Info.Template.plist
-TemplateMacEditorPlist=/Engine/Build/Mac/Resources/Info-Editor.Template.plist
-TemplateIOSPlist=/Game/Build/IOS/UBTGenerated/Info.Template.plist
-PremadeMacEntitlements=/Engine/Build/Mac/Resources/Sandbox.Server.entitlements
-ShippingSpecificMacEntitlements=/Engine/Build/Mac/Resources/Sandbox.NoNet.entitlements
-
 ; These are the defaults for Android settings, and they need to be in the .ini since UBT reads the .ini settings, without instantiating the class
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 SDKAPILevelOverride=
@@ -3036,6 +3023,19 @@ EditorDefaultArchitecture=MacTargetArchitectureHost
 DefaultArchitecture=MacTargetArchitectureHost
 bBuildAllSupportedOnBuildMachine=true
 bEnableRayTracing=false
+
+[/Script/MacTargetPlatform.XcodeProjectSettings]
+bUseModernXcode=false
+bUseModernCodeSigning=true
+ModernSigningTeam=
+ModernSigningPrefix=com.YourCompany
+ModernBundleIdentifier=$(UE_SIGNING_PREFIX).$(UE_PRODUCT_NAME_STRIPPED)
+AppCategory=public.app-category.games
+TemplateMacPlist=/Engine/Build/Mac/Resources/Info.Template.plist
+TemplateMacEditorPlist=/Engine/Build/Mac/Resources/Info-Editor.Template.plist
+TemplateIOSPlist=/Game/Build/IOS/UBTGenerated/Info.Template.plist
+PremadeMacEntitlements=/Engine/Build/Mac/Resources/Sandbox.Server.entitlements
+ShippingSpecificMacEntitlements=/Engine/Build/Mac/Resources/Sandbox.NoNet.entitlements
 
 [HMDPluginPriority]
 ; Since SteamVR also works with the Oculus Rift, give priority to the native Oculus plugin before trying SteamVR.
