Horde: Various compute API improvements.
* All standard buffers now implement IComputeBuffer directly, and do not need to have ToSharedInstance() called to create a ref-counted version.
* Workers can now construct a socket directly, allowing multiple buffers to be attached.
* Control messages are sent whenever a receive buffer is attached, allowing the remote to wait for it to be available.

#preflight none

[CL 25169238 by Ben Marsh in ue5-main branch]

--- a/Engine/Source/Programs/Horde/Samples/RemoteWorkerCpp/RemoteWorkerCpp.vcxproj
+++ b/Engine/Source/Programs/Horde/Samples/RemoteWorkerCpp/RemoteWorkerCpp.vcxproj
@@ -186,11 +186,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ComputeChannel.cpp" />
+    <ClCompile Include="ComputeSocket.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="SharedMemoryBuffer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ComputeChannel.h" />
+    <ClInclude Include="ComputeSocket.h" />
     <ClInclude Include="SharedMemoryBuffer.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
