- Fixed FilePath properties with new XcodeProjectSettings class #fyi calvin.zheng #rb trivial #preflight skip #preflight 644737cbc632d1e89b7cd072
[CL 25174859 by Josh Adams in ue5-main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -3031,11 +3031,11 @@ ModernSigningTeam=
 ModernSigningPrefix=com.YourCompany
 ModernBundleIdentifier=$(UE_SIGNING_PREFIX).$(UE_PRODUCT_NAME_STRIPPED)
 AppCategory=public.app-category.games
-TemplateMacPlist=/Engine/Build/Mac/Resources/Info.Template.plist
-TemplateMacEditorPlist=/Engine/Build/Mac/Resources/Info-Editor.Template.plist
-TemplateIOSPlist=/Game/Build/IOS/UBTGenerated/Info.Template.plist
-PremadeMacEntitlements=/Engine/Build/Mac/Resources/Sandbox.Server.entitlements
-ShippingSpecificMacEntitlements=/Engine/Build/Mac/Resources/Sandbox.NoNet.entitlements
+TemplateMacPlist=(FilePath="/Engine/Build/Mac/Resources/Info.Template.plist")
+TemplateMacEditorPlist=(FilePath="/Engine/Build/Mac/Resources/Info-Editor.Template.plist")
+TemplateIOSPlist=(FilePath="/Game/Build/IOS/UBTGenerated/Info.Template.plist")
+PremadeMacEntitlements=(FilePath="/Engine/Build/Mac/Resources/Sandbox.Server.entitlements")
+ShippingSpecificMacEntitlements=(FilePath="/Engine/Build/Mac/Resources/Sandbox.NoNet.entitlements")
 
 [HMDPluginPriority]
 ; Since SteamVR also works with the Oculus Rift, give priority to the native Oculus plugin before trying SteamVR.
