Create separate preset plugins for VCamActor
#jira UE-183910
#rb Jason.Walter
// Default presubmit
#preflight https://horde.devtools.epicgames.com/job/644665aa27014596f34e1327
// Content
#preflight https://horde.devtools.epicgames.com/job/644682e1641e2c3cb495a594

[CL 25176957 by Dominik Peacock in ue5-main branch]

--- a/Engine/Plugins/Experimental/VirtualCamera/VirtualCamera.uplugin
+++ b/Engine/Plugins/Experimental/VirtualCamera/VirtualCamera.uplugin
@@ -14,14 +14,6 @@
 	"IsBetaVersion": true,
 	"Installed": false,
 	"EnabledByDefault": false,
-	"SupportedTargetPlatforms": [
-		"Win64",
-		"Linux"
-	],
-	"PlatformAllowList": [
-		"Win64",
-		"Linux"
-	],
 	"Plugins": [
 		{
 			"Name" : "VirtualCameraCore",
@@ -30,6 +22,16 @@
 		{
 			"Name" : "CineCameraRigs",
 			"Enabled": true
+		},
+		{
+			"Name" : "VirtualCameraPixelStreamingPreset",
+			"Enabled": true,
+			"PlatformAllowList" : [ "Win64", "Linux" ]
+		},
+		{
+			"Name" : "VirtualCameraMacPreset",
+			"Enabled": true,
+			"PlatformAllowList" : [ "Mac" ]
 		}
 	]
 }
