--- a/Engine/Plugins/Experimental/VirtualProductionUtilities/VirtualProductionUtilities.uplugin
+++ b/Engine/Plugins/Experimental/VirtualProductionUtilities/VirtualProductionUtilities.uplugin
@@ -17,7 +17,7 @@
 		{
 			"Name": "VPUtilities",
 			"Type": "Runtime",
-			"LoadingPhase": "PostDefault"
+			"LoadingPhase": "PostConfigInit"
 		},
 		{
 			"Name": "VPUtilitiesEditor",
