Skeleton Mesh Editing tool: rename plugin and module information to something more meaningful
#jira none
#rb kiaran.ritchie
#preflight 6442a7fcf030f684d50bd787

[CL 25177127 by benoit gadreau in ue5-main branch]

--- a/Engine/Plugins/Experimental/Animation/SkeletalMeshModelingTools/SkeletalMeshModelingTools.uplugin
+++ b/Engine/Plugins/Experimental/Animation/SkeletalMeshModelingTools/SkeletalMeshModelingTools.uplugin
@@ -2,8 +2,8 @@
 	"FileVersion": 3,
 	"Version": 1,
 	"VersionName": "0.1",
-	"FriendlyName": "Skeletal Mesh Modeling Tools",
-	"Description": "Modeling Tools for the Skeletal Mesh Editor",
+	"FriendlyName": "Skeletal Mesh Editing Tools",
+	"Description": "Create skeletons, paint skin weights and edit skeletal meshes.",
 	"Category" : "Animation",
 	"CreatedBy" : "Epic Games, Inc.",
 	"CreatedByURL": "https://epicgames.com/",
