UX: Remove user-visible ES31 editor references and replace with Mobile #jira UE-134173 #rb Jack.Porter #preflight 6447ac2e641e2c3cb4227930
[CL 25178065 by Florin Pascu in ue5-main branch]

--- a/Engine/Config/Android/DataDrivenPlatformInfo.ini
+++ b/Engine/Config/Android/DataDrivenPlatformInfo.ini
@@ -27,8 +27,8 @@ ShaderPlatform=OPENGL_ES3_1_ANDROID
 ShaderFormat=GLSL_ES3_1_ANDROID
 ActiveIconName=LevelEditor.PreviewMode.AndroidES31.Enabled
 InactiveIconName=LevelEditor.PreviewMode.AndroidES31.Disabled
-MenuTooltip=NSLOCTEXT("PreviewPlatform", "PreviewMenuTooltip_ES31", "Mobile preview using Android ES3.1 quality settings.")
-IconText=NSLOCTEXT("PreviewPlatform", "PreviewIconText_ES31", "Android ES3.1")
+MenuTooltip=NSLOCTEXT("PreviewPlatform", "PreviewMenuTooltip_AndroidOpenGL ", "Mobile preview using Android OpenGL quality settings.")
+IconText=NSLOCTEXT("PreviewPlatform", "PreviewIconText_AndroidOpenGL", "Android OpenGL")
 DeviceProfileName=Android_Preview_OpenGL
 
 [PreviewPlatform AndroidVulkan]
@@ -64,7 +64,7 @@ bSupportsMobileMultiView=true
 bNeedsOfflineCompiler=true
 bSupportsManualVertexFetch=false
 bSupportsClipDistance = false
-FriendlyName=LOCTEXT("FriendlyShaderPlatformName_AndroidES31", "Android Opengl ES31")
+FriendlyName=LOCTEXT("FriendlyShaderPlatformName_Android", "Android OpenGL Mobile")
 
 [ShaderPlatform VULKAN_ES3_1_ANDROID]
 Language=Vulkan
@@ -77,7 +77,7 @@ bNeedsOfflineCompiler=true
 bSupportsIndexBufferUAVs=true
 bSupportsManualVertexFetch=false
 bSupportsClipDistance = false
-FriendlyName=LOCTEXT("FriendlyShaderPlatformName_AndroidVulkan", "Android Vulkan ES31")
+FriendlyName=LOCTEXT("FriendlyShaderPlatformName_AndroidVulkan", "Android Vulkan Mobile")
 
 [ShaderPlatform VULKAN_SM5_ANDROID]
 Language=Vulkan
