--- a/Engine/Config/HoloLens/DataDrivenPlatformInfo.ini
+++ b/Engine/Config/HoloLens/DataDrivenPlatformInfo.ini
@@ -34,4 +34,4 @@ bSupportsInstancedStereo=true
 bSupportsManualVertexFetch=false
 bSupportsVertexShaderLayer=true
 bSupportsClipDistance = false
-FriendlyName=LOCTEXT("FriendlyShaderPlatformName_HololensES31", "Hololens ES31")
+FriendlyName=LOCTEXT("FriendlyShaderPlatformName_HololensMobile", "Hololens Mobile")
