--- a/Engine/Config/VulkanPC/DataDrivenPlatformInfo.ini
+++ b/Engine/Config/VulkanPC/DataDrivenPlatformInfo.ini
@@ -260,7 +260,7 @@ bSupportsMobileMultiView=true
 bSupportsIndexBufferUAVs=true
 bSupportsManualVertexFetch=false
 bSupportsSceneDataCompressedTransforms=true
-FriendlyName=LOCTEXT("FriendlyShaderPlatformName_VulkanPC_ES31", "PC Vulkan ES31")
+FriendlyName=LOCTEXT("FriendlyShaderPlatformName_VulkanPC_Mobile", "PC Vulkan Mobile")
 
 
 [PreviewPlatform VULKAN_SM5]
