--- a/Engine/Config/Windows/DataDrivenPlatformInfo.ini
+++ b/Engine/Config/Windows/DataDrivenPlatformInfo.ini
@@ -155,14 +155,14 @@ bSupportsVertexShaderLayer=true
 bSupportsManualVertexFetch=false
 bSupportsSceneDataCompressedTransforms=true
 bSupportsDebugViewShaders=true
-FriendlyName=LOCTEXT("FriendlyShaderPlatformName_D3D_ES31", "PC D3D ES31")
+FriendlyName=LOCTEXT("FriendlyShaderPlatformName_D3D_Mobile", "PC D3D Mobile")
 SupportsMultiViewport=RuntimeDependent
 
 [PreviewPlatform PCD3D_ES3_1]
 PlatformName=PCD3D_ES3_1
 ShaderFormat=PCD3D_ES31
 ShaderPlatform=PCD3D_ES3_1
-MenuTooltip=LOCTEXT("PreviewMenuTooltip_PCD3D_ES3_1", "Windows using ES3_1 profile.")
+MenuTooltip=LOCTEXT("PreviewMenuTooltip_PCD3D_Mobile", "Windows using Mobile profile.")
 
 [ShaderPlatform OPENGL_PCES3_1]
 Language=OpenGL
@@ -173,4 +173,4 @@ ShaderFormat=GLSL_150_ES31
 bIsMobile=true
 bSupportsManualVertexFetch=false
 bSupportsClipDistance = false
-FriendlyName=LOCTEXT("FriendlyShaderPlatformName_PCGL_ES31", "PC Opengl ES31")
+FriendlyName=LOCTEXT("FriendlyShaderPlatformName_PCGL_Mobile", "PC OpenGL Mobile")
