Rename VirtualCameraPixelStreamingPreset and VirtualCameraMacPreset to VCamPixelStreamingPreset and VCamMacPreset
#jira UE-184204
#rb none
#preflight https://horde.devtools.epicgames.com/job/64480abc09453df548cee6d1
#fyi Jason.Walter

[CL 25183998 by Dominik Peacock in ue5-main branch]

--- a/Engine/Plugins/Experimental/VirtualCamera/VirtualCamera.uplugin
+++ b/Engine/Plugins/Experimental/VirtualCamera/VirtualCamera.uplugin
@@ -24,12 +24,12 @@
 			"Enabled": true
 		},
 		{
-			"Name" : "VirtualCameraPixelStreamingPreset",
+			"Name" : "VCamPixelStreamingPreset",
 			"Enabled": true,
 			"PlatformAllowList" : [ "Win64", "Linux" ]
 		},
 		{
-			"Name" : "VirtualCameraMacPreset",
+			"Name" : "VCamMacPreset",
 			"Enabled": true,
 			"PlatformAllowList" : [ "Mac" ]
 		}
