--- a/Engine/Config/VulkanPC/DataDrivenPlatformInfo.ini
+++ b/Engine/Config/VulkanPC/DataDrivenPlatformInfo.ini
@@ -133,6 +133,7 @@ EnablesHLSL2021ByDefault=1
 FriendlyName=LOCTEXT("FriendlyShaderPlatformName_VulkanPC_SM5", "PC Vulkan SM5")
 
 BindlessSupport=Unsupported
+bSupportsNNEShaders=true
 
 
 
@@ -248,6 +249,7 @@ EnablesHLSL2021ByDefault=1
 FriendlyName=LOCTEXT("FriendlyShaderPlatformName_VulkanPC_SM6", "PC Vulkan SM6")
 
 BindlessSupport=AllShaderTypes
+bSupportsNNEShaders=true
 
 
 [ShaderPlatform VULKAN_PCES3_1]
