--- a/Engine/Config/Windows/DataDrivenPlatformInfo.ini
+++ b/Engine/Config/Windows/DataDrivenPlatformInfo.ini
@@ -76,6 +76,7 @@ BindlessSupport=RayTracingOnly
 SupportsMultiViewport=RuntimeDependent
 FriendlyName=LOCTEXT("FriendlyShaderPlatformName_D3D_SM5", "PC D3D SM5")
 bSupportsDualSourceBlending=true
+bSupportsNNEShaders=true
 
 [PreviewPlatform PCD3D_SM5]
 PlatformName=PCD3D_SM5
@@ -134,6 +135,7 @@ bSupportsRealTypes=RuntimeDependent
 EnablesHLSL2021ByDefault=1
 SupportsMultiViewport=RuntimeGuaranteed
 bSupportsDualSourceBlending=true
+bSupportsNNEShaders=true
 
 [PreviewPlatform PCD3D_SM6]
 PlatformName=PCD3D_SM6
