unsync - Initial implementation of the "scavenge" mode which aims to reduce download times by reusing data outside of the final sync directory
This is useful for people who want to download each data set into a uniquely named directory, instead of always patching the last downloaded version.

Current implementation is highly experimental and should only be used for testing purposes.

#jira UE-178864
#rb none
#preflight skip

[CL 25190443 by Yuriy ODonnell in ue5-main branch]

--- a/Engine/Source/Programs/Unsync/CMakeLists.txt
+++ b/Engine/Source/Programs/Unsync/CMakeLists.txt
@@ -55,6 +55,7 @@ set(src
 	Private/UnsyncFile.h
 	Private/UnsyncHash.cpp
 	Private/UnsyncHash.h
+	Private/UnsyncHashTable.h
 	Private/UnsyncHttp.cpp
 	Private/UnsyncHttp.h
 	Private/UnsyncJupiter.cpp
@@ -74,6 +75,8 @@ set(src
 	Private/UnsyncRemote.cpp
 	Private/UnsyncRemote.h
 	Private/UnsyncScan.h
+	Private/UnsyncScavenger.cpp
+	Private/UnsyncScavenger.h
 	Private/UnsyncSerialization.cpp
 	Private/UnsyncSerialization.h
 	Private/UnsyncSocket.cpp
