Moving PropertyView UWidgets to ScriptableEditorWidgets so they are correctly filtered out of the runtime UMG Designer palette. Upgrade note: if you were previously depending on UMGEditor because you subclassed one of these widgets, you will now need to depend on ScriptableEditorWidgets. #rb Aditya.RaviChandran #preflight 6447d790024bc608e64d74bc
[CL 25197326 by lauren barnes in ue5-main branch]

--- a/Engine/Config/BaseEngine.ini
+++ b/Engine/Config/BaseEngine.ini
@@ -1141,6 +1141,9 @@ DefaultWorldPartitionHLODLayer=/Engine/Maps/Templates/HLODs/HLODLayer_Instanced.
 
 +StructRedirects=(OldName="/Script/UMG.FieldNotificationId", NewName="/Script/FieldNotification.FieldNotificationId")
 +ClassRedirects=(OldName="/Script/UMG.NotifyFieldValueChanged", NewName="/Script/FieldNotification.NotifyFieldValueChanged")
++ClassRedirects=(OldName="/Script/UMGEditor.DetailsView", NewName="/Script/ScriptableEditorWidgets.DetailsView")
++ClassRedirects=(OldName="/Script/UMGEditor.SinglePropertyView", NewName="/Script/ScriptableEditorWidgets.SinglePropertyView")
++ClassRedirects=(OldName="/Script/UMGEditor.PropertyViewBase", NewName="/Script/ScriptableEditorWidgets.PropertyViewBase")
 
 ; Refactoring most of HeadMountedDisplay engine module into XRBase plugin.
 +ClassRedirects=(OldName="HeadMountedDisplayFunctionLibrary", NewName="/Script/XRBase.HeadMountedDisplayFunctionLibrary")
