--- a/Engine/Plugins/Compositing/OpenColorIO/OpenColorIO.uplugin
+++ b/Engine/Plugins/Compositing/OpenColorIO/OpenColorIO.uplugin
@@ -17,7 +17,7 @@
 	"Modules": [
 		{
 			"Name": "OpenColorIOWrapper",
-			"Type": "Editor",
+			"Type": "Runtime",
 			"LoadingPhase": "PostConfigInit"
 		},
 		{
