[UBT - BoxExecutor] * Does now support running all actions that can run remotely (before it was only cl.exe/clang++.exe) * Added visualizer (use with -Visualizer)
#preflight 644978b6877716c878b334cd
#rb none

[CL 25208656 by henrik karlsson in ue5-main branch]

--- a/Engine/Source/Programs/UnrealBuildTool/UnrealBuildTool.csproj
+++ b/Engine/Source/Programs/UnrealBuildTool/UnrealBuildTool.csproj
@@ -78,6 +78,9 @@
         <Content Include="..\..\..\Restricted\NotForLicensees\Binaries\Win64\Box\BoxDetours.dll">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
+        <Content Include="..\..\..\Restricted\NotForLicensees\Binaries\Win64\Box\BoxVisualizer.exe">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </Content>
         <Content Include="..\..\..\Restricted\NotForLicensees\Binaries\Win64\Box\Ijwhost.dll">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </Content>
