NearestNeighborModel: Remove trailing commas in uplugin file #rb none #jira none #preflight none
[CL 25218244 by Zhenglin Geng in ue5-main branch]

--- a/Engine/Plugins/Animation/MLDeformer/NearestNeighborModel/NearestNeighborModel.uplugin
+++ b/Engine/Plugins/Animation/MLDeformer/NearestNeighborModel/NearestNeighborModel.uplugin
@@ -18,12 +18,12 @@
 		{
 			"Name": "NearestNeighborModel",
 			"Type": "Runtime",
-			"LoadingPhase": "Default",
+			"LoadingPhase": "Default"
 		},
 		{
 			"Name": "NearestNeighborModelEditor",
 			"Type": "Editor",
-			"LoadingPhase": "Default",
+			"LoadingPhase": "Default"
 		}
 	],
 	"Plugins": [
