unsync - Deduplicate blocks within the same file while building scavenge database
* Log progress when scavenging blocks from local files
* Move prorress logging helper code to dedicated files

#rb none
#preflight skip

[CL 25247737 by Yuriy ODonnell in ue5-main branch]

--- a/Engine/Source/Programs/Unsync/CMakeLists.txt
+++ b/Engine/Source/Programs/Unsync/CMakeLists.txt
@@ -68,6 +68,8 @@ set(src
 	Private/UnsyncMiniCb.cpp
 	Private/UnsyncMiniCb.h
 	Private/UnsyncPool.h
+	Private/UnsyncProgress.cpp
+	Private/UnsyncProgress.h
 	Private/UnsyncProtocol.cpp
 	Private/UnsyncProtocol.h
 	Private/UnsyncProxy.cpp
